--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   
   <title>Frontend Mentor | NFT preview card component</title>
 
+  <link rel="stylesheet" href="styles.css">
+
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -16,18 +18,36 @@
 </head>
 <body>
 
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
+  <main>
+    <div class="card">
+      <img src="./images/image-equilibrium.jpg" alt="image of a transparent cube on it's corner">
+      <h1>
+        Equilibrium #3429
+      </h1>
+      <p>
+        Our Equilibrium collection promotes balance and calm.
+      </p>
   
-  Creation of Jules Wyvern
+      <div class="info">
+        <span class="crypto">
+          <img src="./images/icon-ethereum.svg" alt="ethereum crypto icon">0.041 ETH
+        </span>
+        <span class="days">
+          <img src="./images/icon-clock.svg" alt="clock icon">3 days left
+        </span>
+      </div>
+      
+      <div class="creation">
+        <img src="./images/image-avatar.png" alt="image of the creator">
+        Creation of <span class="creator-name">Jules Wyvern</span>
+      </div>
+    </div>
+  
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </main>
 </body>
 </html>
