--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
 
   <link rel="stylesheet" href="styles.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
   <main>
     <div class="card">
-      <img src="./images/image-equilibrium.jpg" alt="image of a transparent cube on it's corner">
+      <img class="main-image" src="./images/image-equilibrium.jpg" alt="image of a transparent cube on it's corner">
+      <div class="overlay">
+        <img src="./images/icon-view.svg" alt="eye icon">
+      </div>
       <h1>
         Equilibrium #3429
       </h1>
@@ -41,12 +39,6 @@
         <img src="./images/image-avatar.png" alt="image of the creator">
         Creation of <span class="creator-name">Jules Wyvern</span>
       </div>
-    </div>
-  
-
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
     </div>
   </main>
 </body>
