--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 
   <main>
     <div class="card">
-      <img class="main-image" src="./images/image-equilibrium.jpg" alt="image of a transparent cube on it's corner">
-      <div class="overlay">
-        <img src="./images/icon-view.svg" alt="eye icon">
+      <div class="image-container">
+        <img class="main-image" src="./images/image-equilibrium.jpg" alt="image of a transparent cube on it's corner">
+        <div class="image-overlay">
+          <img src="./images/icon-view.svg" alt="eye icon">
+        </div>
       </div>
       <h1>
         Equilibrium #3429
