--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
   
       <div class="info">
         <span class="crypto">
-          <img src="./images/icon-ethereum.svg" alt="ethereum crypto icon">0.041 ETH
+          0.041 ETH
         </span>
         <span class="days">
-          <img src="./images/icon-clock.svg" alt="clock icon">3 days left
+          3 days left
         </span>
       </div>
       
